[package]
name = "bungee-sys"
version = "0.1.0"
edition = "2021"
description = "Low-level Rust FFI bindings for the Bungee audio time-stretching library"
license = "MPL-2.0"
repository = "https://github.com/bungee-audio-stretch/bungee"
authors = ["Eduard Müller <mail@emuell.net>"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cpp = "^0.5"

[build-dependencies]
cc = "^1.2"
cpp_build = "^0.5"
cmake = "^0.1"
