[package]
authors = ["Eduard Müller <mail@emuell.net>"]
categories = ["multimedia::audio"]
description = "Low-level Rust FFI bindings for the Bungee audio time-stretching library"
edition = "2021"
keywords = ["audio", "bungee", "timestretch"]
name = "bungee-sys"
license = "MPL-2.0"
repository = "https://github.com/emuell/bungee-rs"
version = "0.1.1"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cpp = "^0.5"

[build-dependencies]
cc = "^1.2"
cpp_build = "^0.5"
cmake = "^0.1"
